--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Toko Buku | Menjual buku-buku berkualitas secara online</title>
+    <title>Katalog Buku | Menampilkan koleksi buku terbaik</title>
   </head>
   <body>
     <div id="app"></div>
